trustfall_core/test_data/tests/parse_errors/invalid_transform_op.parse-error.ron
Err(UnsupportedTransformOperator("nonexistent", Pos(
  line: 4,
  column: 30,
)))
